--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <label>Check out</label>
             <input type="text" id="checkout" placeholder="Add dates" />
           </div>
-          <div class="border"></div>
+          <div class="border tab-view"></div>
 
-          <div class="search mob-view">
+          <div class="search mob-view tab-view">
             <label>Who</label>
             <input type="text" placeholder="Add Guest" />
           </div>
@@ -65,8 +65,387 @@
         </button>
       </div>
     </header>
+
+    <div class="scroll-options">
+      <div class="content-wrapper">
+        <div class="category">Trending</div>
+        <div class="category">Cabins</div>
+        <div class="category">Islands</div>
+        <div class="category">Amazing Pools</div>
+        <div class="category">Campsites</div>
+        <div class="category">Arctic</div>
+        <div class="category">Amazing View</div>
+        <div class="category">Castles</div>
+        <div class="category">Luxury</div>
+      </div>
+    </div>
+
+    <div class="hotel-options">
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel1.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel2.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel3.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel4.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel6.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel7.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel8.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel9.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel10.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel5.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel1.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel2.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel3.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel4.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel6.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel7.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel8.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel9.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel10.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+
+      <div class="hotel">
+        <img class="hotel-img" src="images\hotel5.avif" alt="hotel" />
+        <div>
+          <div class="hotel-rating">
+            <h3>Lorem, ipsum</h3>
+            <div>
+              <img src="svg\star.svg" alt="rating star" class="rating-star" />
+              <span>4.9</span>
+            </div>
+          </div>
+          <p class="info">
+            1,899 kilometers away<br />
+            6-11 Apr<br />
+            <span class="underline">₹67,615</span> for 5 nights
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <button class="show-map">
+      Show Map <img src="svg\map-icon.svg" alt="map icon" />
+    </button>
   </body>
 
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="script.js"></script>
 </html>
