Airbnb home page clone completed

--- a/index.html
+++ b/index.html
@@ -445,6 +445,80 @@
     <button class="show-map">
       Show Map <img src="svg\map-icon.svg" alt="map icon" />
     </button>
+
+    <div class="call-to-action" id="btn-hideandseek">
+      <p>Continue Exploring</p>
+      <button>Show more</button>
+    </div>
+
+    <footer>
+      <div class="quick-links">
+        <div class="footer-sect">
+          <h4>Support</h4>
+          <p>Help Centre</p>
+          <p>AirCover</p>
+          <p>Anti-discrimination</p>
+          <p>Disability support</p>
+          <p>Cancellation options</p>
+          <p>Report neighbourhood concern</p>
+        </div>
+
+        <div class="footer-sect">
+          <h4>Hosting</h4>
+          <p>Airbnb your home</p>
+          <p>AirCover for Hosts</p>
+          <p>Hosting resources</p>
+          <p>Community forum</p>
+          <p>Hosting responsibly</p>
+        </div>
+
+        <div class="footer-sect">
+          <h4>Join a free Hosting class</h4>
+          <p>Find a co‑host</p>
+          <p>Airbnb Newsroom</p>
+          <p>New features</p>
+          <p>Careers Investors</p>
+          <p>Airbnb.org emergency stays</p>
+        </div>
+      </div>
+      <div class="testimony">
+        <div class="socials on-small-screen">
+          <img src="svg\facebook.svg" alt="facebook" />
+          <img src="svg\instagram.svg" alt="instagram" />
+          <img src="svg\whatsapp.svg" alt="whatsapp" />
+        </div>
+        <div class="documents">
+          <p>© 2025 Airbnb, Inc.</p>
+          <p>·Privacy</p>
+          <p>·Terms</p>
+          <p>·Sitemap</p>
+          <p>·Company details</p>
+        </div>
+
+        <div class="socials on-desktop">
+          <img src="svg\facebook.svg" alt="facebook" />
+          <img src="svg\instagram.svg" alt="instagram" />
+          <img src="svg\whatsapp.svg" alt="whatsapp" />
+        </div>
+      </div>
+    </footer>
+
+    <div class="mobile-nav">
+      <button class="navigation">
+        <img src="svg\gray-search.svg" alt="search" />
+        <p>Explore</p>
+      </button>
+
+      <button class="navigation">
+        <img src="svg\gray-heart.svg" alt="search" />
+        <p>Wishlist</p>
+      </button>
+
+      <button class="navigation">
+        <img src="svg\gray-profile.svg" alt="search" />
+        <p>Profile</p>
+      </button>
+    </div>
   </body>
 
   <script src="script.js"></script>
